--- a/reservations.html
+++ b/reservations.html
@@ -29,5 +29,6 @@
         <h1>Reservations page</h1>
         <p> coming soon!<p>
     </div>
+    <a href="{% url 'homepage' %}" class="back-btn">Back To Home</a>
 </body>
 </html>
